--- a/konfirmasi.html
+++ b/konfirmasi.html
@@ -35,11 +35,12 @@
         <select id="metode" name="metode" required>
           <option value="">-- Pilih Bank --</option>
           <option value="BCA">BCA</option>
-          <option value="BSI">BSI</option>
-          <option value="BRI">BRI</option>
-          <option value="Mandiri">Mandiri</option>
-          <option value="Dana">Dana</option>
         </select>
+        <!-- Info rekening -->
+      <div id="rekeningCard" class="rekening-box d-none mt-2">
+      <p><strong>No. Rekening:</strong> 8420964863</p>
+      <p><strong>Nama Pemilik:</strong> Kresnadly</p>
+      </div>
       </div>
 
       <div class="form-group">
