--- a/konfirmasi.html
+++ b/konfirmasi.html
@@ -29,6 +29,7 @@
       <div class="form-group">
         <label for="nama">Nama Lengkap</label>
         <input type="text" id="nama" name="nama" required />
+        <small class="form-note">Masukkan nama lengkap Sulthon.</small>
       </div>
 
       <div class="form-group">
