--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Undangan Kajian Ashnaf Vol.2</title>
+  <title>Registrasi Kajian-Pembekalan  </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="style.css" rel="stylesheet" />
   <style>
@@ -29,7 +29,7 @@
 <body>
   <div class="container text-center">
     <img src="logomajlis.png" alt="Logo Majlis" style="width: 80px; margin-bottom: 20px;">
-    <h1>Undangan Kajian Ashnaf Vol.2</h1>
+    <h1>Registrasi Kajian-Pembekalan</h1>
     <p>Silakan pilih menu di bawah ini:</p>
     <div class="d-grid gap-3 mt-4">
       <a href="pendaftaran.html" class="btn btn-primary btn-lg">📝 Daftar Kajian</a>
