--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="form-container">
-    <h2 class="form-title">Form Pendaftaran Kajian Ashnaf Vol.2</h2>
+    <h2 class="form-title">Form Pendaftaran Kajian - Pembekalan</h2>
 
     <form id="pendaftaranForm" method="POST">
       <div class="form-group">
