--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -20,7 +20,7 @@
 
       <div class="form-group">
         <label for="hp">Nomor WhatsApp</label>
-        <input type="tel" id="hp" name="hp" pattern="^62[0-9]{9,}$" required />
+        <input type="tel" id="hp" name="wa" pattern="^62[0-9]{9,}$" required />
         <small class="form-note">Nomor harus diawali dengan 62 (contoh: 6281234567890).</small>
       </div>
 
