--- a/pendaftaran.html
+++ b/pendaftaran.html
@@ -55,7 +55,7 @@
   <script>
     const form = document.getElementById('pendaftaranForm');
     const spinner = document.getElementById('spinner');
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbx528e3Yp53NjHRGkUb65TIfUujYfw0pbE4tNhCN1-G-K__Y6ug-RzLLDuI4v1i42wudg/exec'; // Ganti dengan URL Script kamu
+    const scriptURL = 'AKfycbx528e3Yp53NjHRGkUb65TIfUujYfw0pbE4tNhCN1-G-K__Y6ug-RzLLDuI4v1i42wudg'; // Ganti dengan URL Script kamu
 
     form.addEventListener('submit', e => {
       e.preventDefault();
